[package]
name = "cafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
